@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2017-11-05 mmichaud <m.michael.michaud@orange.fr>
+  * Start support of prj file through crs library
+
 2017-10-25 Giuseppe Aruta
   * Upgraded CadTools to version 0.3 - Feature request #257:
     CAD tools to show area in real time when drawing closed geometries. 
